kubernetes/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - name: http
      port: 6767
      targetPort: http
