kubernetes/media/bazarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.home.mcnees.me`) || Host(`bazarr-k8s.home.mcnees.me`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: auth
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: legacy-home-wildcard-tls
